--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Build Status](https://travis-ci.org/devecho/sync-echo-build.png?branch=master)](https://travis-ci.org/devecho/sync-echo-build)
+
 License: http://creativecommons.org/licenses/by-nc-nd/3.0/
 
 Creative Commons - Attribution-NonCommercial-NoDerivs 3.0 Unported (CC BY-NC-ND 3.0)
